Janitor: Correct make distcheck and configure.ac simplification

--- a/Makefile.am
+++ b/Makefile.am
@@ -25,7 +25,7 @@ ttffont_DATA = GohaTibebZemen.ttf
 otffontdir = @OTFFONTDIR@
 otffont_DATA = GohaTibebZemen.otf
 
-EXTRA_DIST = $(ttffont_DATA) $(otffont_DATA) license.txt autogen.sh
+EXTRA_DIST = $(ttffont_DATA) $(otffont_DATA) license.txt
 
 install-data-hook:
 	@rm -f $(DESTDIR)$(ttffontdir)/fonts.scale
@@ -48,6 +48,6 @@ MAINTAINERCLEANFILES = ChangeLog
 .PHONY: ChangeLog
 
 ChangeLog:
-	(GIT_DIR=$(top_srcdir)/.git git-log > .changelog.tmp && mv .changelog.tmp ChangeLog; rm -f .changelog.tmp) || (touch ChangeLog; echo 'git directory not found: installing possibly empty changelog.' >&2)
+	$(CHANGELOG_CMD)
 
 dist-hook: ChangeLog
