misc-ethiopic: Skip fc-cache with DESTDIR.
Fontconfig-2.7.0 runs chmod on the cachedir, causing access violations
when installing into a sandboxed environment.

Signed-off-by: Ryan Hill <dirtyepic@gentoo.org>
Signed-off-by: Rémi Cardona <remi@gentoo.org>

--- a/Makefile.am
+++ b/Makefile.am
@@ -32,12 +32,30 @@ install-data-hook:
 	$(MKFONTSCALE) $(DESTDIR)$(ttffontdir)
 	@rm -f $(DESTDIR)$(ttffontdir)/font.dir
 	$(MKFONTDIR) $(DESTDIR)$(ttffontdir)
-	$(FCCACHE) $(DESTDIR)$(ttffontdir)
+	@(if `test -z '$(DESTDIR)'`; then \
+		echo $(FCCACHE) $(ttffontdir); \
+		$(FCCACHE) $(ttffontdir); \
+	else \
+		echo "***"; \
+		echo "*** Warning: fonts.cache not built"; \
+		echo "***"; \
+		echo "*** Generate this file manually on host system using fc-cache"; \
+		echo "***"; \
+	fi)
 	@rm -f $(DESTDIR)$(otffontdir)/fonts.scale
 	$(MKFONTSCALE) $(DESTDIR)$(otffontdir)
 	@rm -f $(DESTDIR)$(otffontdir)/font.dir
 	$(MKFONTDIR) $(DESTDIR)$(otffontdir)
-	$(FCCACHE) $(DESTDIR)$(otffontdir)
+	@(if `test -z '$(DESTDIR)'`; then \
+		echo $(FCCACHE) $(otffontdir); \
+		$(FCCACHE) $(otffontdir); \
+	else \
+		echo "***"; \
+		echo "*** Warning: fonts.cache not built"; \
+		echo "***"; \
+		echo "*** Generate this file manually on host system using fc-cache"; \
+		echo "***"; \
+	fi)
 
 distuninstallcheck:
 	@:
