Makefile.am: add ChangeLog and INSTALL on MAINTAINERCLEANFILES
Now that the INSTALL file is generated.
Allows running make maintainer-clean.

--- a/Makefile.am
+++ b/Makefile.am
@@ -30,6 +30,8 @@ fontdir = $(ttffontdir) $(otffontdir)
 
 EXTRA_DIST = $(ttffont_DATA) $(otffont_DATA) license.txt
 
+MAINTAINERCLEANFILES = ChangeLog INSTALL
+
 install-data-hook:
 	@rm -f $(DESTDIR)$(ttffontdir)/fonts.scale
 	$(MKFONTSCALE) $(DESTDIR)$(ttffontdir)
