config: replace deprecated use of AC_OUTPUT with AC_CONFIG_FILES
Fix Automake warning: AC_OUTPUT should be used without arguments.
www.gnu.org/software/autoconf/manual/autoconf.html#Configuration-Files

Signed-off-by: Gaetan Nadon <memsize@videotron.ca>

--- a/configure.ac
+++ b/configure.ac
@@ -56,4 +56,5 @@ XORG_FONTSUBDIR([TTFFONTDIR], [ttf-fontdir], [TTF])
 XORG_FONTSUBDIR([OTFFONTDIR], [otf-fontdir], [OTF])
 XORG_FONT_SCALED_UTILS
 
-AC_OUTPUT([Makefile])
+AC_CONFIG_FILES([Makefile])
+AC_OUTPUT
